# 3d-objects-generator-and-viewer

./: CMakeLists.txt  README.md  default.pal  run.sh  spacecut.pal
src/: AmigaFile.cpp  AmigaFile.hpp  BinaryBuffer.hpp  ComponentFactories.cpp  ComponentFactories.hpp  ComponentFactoryBase.cpp  ComponentFactoryBase.hpp  Components.cpp  Components.hpp  ComponentsTests.cpp  Composite.cpp  Composite.hpp  Cube.cpp  Cube.hpp  CubeExt.cpp  CubeExt.hpp  Face.cpp  Face.hpp  Faces.hpp  FileFormatConverter.cpp  FileFormatConverter.hpp  FileFormatConverterTests.cpp  FileLoader.cpp  FileLoader.hpp  FileSaver.cpp  FileSaver.hpp  FractalTetrahedron.cpp  FractalTetrahedron.hpp  GeneratorMain.cpp  Object3D.cpp  Object3D.hpp  Object3DBuilder.hpp  ObjectBuilder.hpp  ObjectFactories.cpp  ObjectFactories.hpp  ObjectFactoryBase.cpp  ObjectFactoryBase.hpp  ObjectFactoryTests.cpp  ObjectParamValidators.cpp  ObjectParamValidators.hpp  (+39 more)
